force-app/main/default/objects/Inner_Note__c/Inner_Note__c.object-meta.xml
<CustomObject>
    <label>Note</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Note Subject</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>