force-app/main/default/objects/Inner_Note__c/fields/Is_Important__c.field-meta.xml
<CustomField>
    <fullName>Is_Important__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Important</label>
    <type>Checkbox</type>
</CustomField>