force-app/main/default/objects/Inner_Note__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Received Notes</relationshipLabel>
    <relationshipName>Received_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>