force-app/main/default/objects/Inner_Note__c/fields/Recipient_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recipient Deleted</label>
    <type>Checkbox</type>
</CustomField>