force-app/main/default/objects/Inner_Note__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sender</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sent Notes</relationshipLabel>
    <relationshipName>Sent_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>