force-app/main/default/objects/Inner_Note__c/fields/Sender_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Sender_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sender Deleted</label>
    <type>Checkbox</type>
</CustomField>